# solar

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  install.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  release.yml
docs/: _config.yml  architecture.md  backend-contract.md  command-reference.md  compiler-backends.md  getting-started.md  implementation-plan.md  index.md  installation.md  migration-v0.3-to-v0.4.md  migration-v0.4-to-v0.4.5.md  migration-v1-to-v2.md  profiles.md  project-format.md  release-audit-0.4.5.md  release-notes-0.4.5.md  release-process.md  roadmap.md  testing.md  troubleshooting.md  yanc.md
docs/pt-BR/: getting-started.md
examples/counter/: .gitignore  README.md  solar.toml
examples/counter/rtl/: counter.v
examples/counter/rtl/include/: counter_defs.vh
examples/counter/tb/: counter_overflow_tb.v  counter_tb.v
examples/verilator-cocotb/: README.md  solar.toml
examples/verilator-cocotb/rtl/: adder.v
examples/verilator-cocotb/tb/: test_adder.py
examples/yanc-asm/: .gitignore  README.md  solar.toml
examples/yanc-asm/software/: processor.asm
examples/yanc-cmm/: README.md  solar.toml
examples/yanc-cmm/software/: processor.cmm
examples/yanc-cpp/: README.md  solar.toml
examples/yanc-cpp/software/: processor.cpp
include/solar/: artifact.h  backend.h  build.h  cocotb.h  compiler.h  config.h  config_edit.h  diagnostics.h  discovery.h  filesystem.h  progress.h  project.h  result.h  rtl.h  runner.h  scan.h  solar.h  synthesis.h  system.h  test.h  waveform.h  yanc.h
scripts/: solar_cocotb_runner.py
src/backends/: backend_internal.h  compiler_backend_internal.h  iverilog.c  registry.c  verilator.c  yanc.c  yanc_resolver.c  yosys.c
src/cli/: command_build.c  command_check.c  command_clean.c  command_config.c  command_doctor.c  command_init.c  command_report.c  command_scan.c  command_view.c  commands.h  main.c  progress.c  progress.h
src/core/: artifact.c  build.c  cocotb.c  compiler.c  config.c  config_edit.c  config_model.c  diagnostics.c  discovery.c  filesystem.c  progress.c  project.c  rtl.c  runner.c  scan.c  synthesis.c  system.c  test.c  waveform.c
tests/: backend_helper.c  runner_helper.c  test_artifact.c  test_backends.c  test_cli.c  test_cocotb.c  test_cocotb_integration.c  test_compiler_yanc.c  test_config.c  test_config_edit.c  test_config_v2.c  test_discovery.c  test_effective_config.c  test_filesystem.c  test_integration.c  test_progress.c  test_project.c  test_result.c  test_runner.c  test_scan.c  test_system.c  test_test_service.c  test_v1_integration.c  test_v2_integration.c  test_validation_v2.c  test_verilator.c  test_waveform.c  test_yanc_integration.c  test_yanc_resolver.c
tests/helpers/: backend_helper.c  viewer_helper.c  yanc_tool.c
